--- a/Módulo 2/package.json
+++ b/Módulo 2/package.json
@@ -2,7 +2,7 @@
   "name": "modulo2",
   "version": "1.0.0",
   "description": "",
-  "main": "condicionales.js",
+  "main": "ejercicio1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
