Estructuras de control Parte 3 También añadí el paquete de prompt-sync para trabajar con input

--- a/Módulo 2/package.json
+++ b/Módulo 2/package.json
@@ -9,6 +9,8 @@
   "author": "Fernando González Robles",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "common-tags": "^1.8.0",
+    "prompt-sync": "^4.2.0"
   }
 }
