--- a/Módulo 2/package.json
+++ b/Módulo 2/package.json
@@ -1,7 +1,7 @@
 {
   "name": "modulo2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Código del Módulo 2 de MagIA Juvenil 2021",
   "main": "condicionales3.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,14 @@
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fernandogonzalez11/MagIAJuvenil2021.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fernandogonzalez11/MagIAJuvenil2021/issues"
+  },
+  "homepage": "https://github.com/fernandogonzalez11/MagIAJuvenil2021#readme"
 }
