--- a/Módulo 2/package.json
+++ b/Módulo 2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
+    "latest-version": "^5.1.0",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {},
