--- a/Módulo 2/package.json
+++ b/Módulo 2/package.json
@@ -14,7 +14,9 @@
     "latest-version": "^5.1.0",
     "prompt-sync": "^4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^14.14.37"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fernandogonzalez11/MagIAJuvenil2021.git"
